--- a/src/config/cifar10.yaml
+++ b/src/config/cifar10.yaml
@@ -1,6 +1,9 @@
 # CIFAR-10 specific configuration
 inherit: base_config.yaml
 
+# Device configuration
+device: 0  # Use first GPU (cuda:0)
+
 dataset:
   name: cifar10
   num_classes: 10
@@ -73,4 +76,4 @@ tau:
 set_size:
   target: 1.2
   max: 3.0
-  margin: 0.5 
+  margin: 1 
