--- a/src/config/imagenet.yaml
+++ b/src/config/imagenet.yaml
@@ -4,6 +4,12 @@ inherit: base_config.yaml
 # Device configuration
 device: 1
 
+# Caching configuration
+cache:
+  enabled: true
+  dir: cache  # Will be created under base_dir
+  compression: false  # Whether to use compression for cached files
+
 dataset:
   name: imagenet
   num_classes: 1000
