--- a/src/config/cifar10.yaml
+++ b/src/config/cifar10.yaml
@@ -2,7 +2,13 @@
 inherit: base_config.yaml
 
 # Device configuration
-device: 0  # Use first GPU (cuda:0)
+device: 1  # Use first GPU (cuda:0)
+
+# Caching configuration
+cache:
+  enabled: true
+  dir: cache  # Will be created under base_dir
+  compression: false  # Whether to use compression for cached files
 
 dataset:
   name: cifar10
