N_05: Add configurable empty prediction set handling and fix double softmax bug in APS/Sparsemax
- Fixed critical bug where APS and Sparsemax applied softmax to already-normalized probabilities
- Added configurable empty_set_handling with three options:
  - keep_empty (default): Most honest, keeps empty sets as size 0
  - add_most_likely: Adds highest probability class
  - add_top_k: Adds top-k classes
- Added comprehensive documentation in docs/empty_set_handling.md
- Updated metrics to track empty sets separately
- Results show all methods achieve 0 empty sets on CIFAR-10

--- a/src/config/base_conformal_scorers.yaml
+++ b/src/config/base_conformal_scorers.yaml
@@ -120,6 +120,14 @@ scoring_functions:
   Sparsemax:
     delta: 0.15  # Threshold parameter for controlling sparsity
 
+# Empty prediction set handling
+# Options: 
+#   - 'keep_empty': Keep empty sets as is (most honest, 0% coverage for those samples)
+#   - 'add_most_likely': Add the most likely class (maintains some coverage)
+#   - 'add_top_k': Add top-k most likely classes (specify k with empty_set_top_k)
+empty_set_handling: 'keep_empty'
+empty_set_top_k: 3  # Only used when empty_set_handling is 'add_top_k'
+
 # Logging settings
 logging:
   level: INFO
