N_08: Fix Sparsemax and optimize ImageNet training
Major changes:
1. Fixed critical bug in Sparsemax scoring function
   - Zero-probability classes now get infinite scores (not 0.691)
   - Reduced avg set size from 147.87 to 1.20 (best among all methods)

2. Optimized ImageNet configuration for better convergence
   - Larger network: [512, 256, 128] for 1000 classes
   - Higher learning rate: 0.001 with better scheduler
   - Stronger separation factor: 5.0 for better discrimination
   - Larger batch size: 128 for stable gradients

3. Cleaned up redundant dataset files
   - Removed obsolete individual scoring files (1-p.py, aps.py, etc)
   - All functionality consolidated in base_conformal_scorers.py

4. Fixed plotting issue with infinite scores in visualization

Results on ImageNet:
- Sparsemax: 1.20 (fixed, was 147.87)
- 1-p: 1.43
- LogMargin: 1.49
- APS: 2.07

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ __pycache__/
 # Claude Code specific files
 CLAUDE.md
 .memory
+dataset_search_prompt.md
+ILSVRC2012_img_train.tar
+docs/empty_set_handling.md
