--- a/src/config/imagenet.yaml
+++ b/src/config/imagenet.yaml
@@ -35,7 +35,7 @@ data_dir: data/imagenet
 
 # Training parameters
 num_epochs: 50
-batch_size: 64
+batch_size: 128  # Larger batch for more stable gradients with 1000 classes
 target_coverage: 0.9
 
 # Training configuration
@@ -44,38 +44,37 @@ training:
     enabled: true
     max_norm: 0.5
   loss_weights:
-    coverage: 2.0  # lambda1
-    size: 1.0      # lambda2
-    margin: 2    # margin loss weight
+    coverage: 1.0  # lambda1 - balanced with size
+    size: 3.0      # lambda2 - increased for smaller sets
+    margin: 5    # margin loss weight - increased for better separation
 
 # Optimizer configuration
 optimizer:
   name: 'AdamW'
   params:
-    lr: 0.001
-    weight_decay: 0.01
+    lr: 0.001  # Start higher, ReduceLROnPlateau will adjust
+    weight_decay: 0.001  # Reduced weight decay
   scheduler:
     name: 'OneCycleLR'
     params:
       max_lr: 0.001
-      pct_start: 0.2
-      div_factor: 20
-      final_div_factor: 100
+      pct_start: 0.1  # Quick warmup
+      div_factor: 10  # Start at lr/10
+      final_div_factor: 1000  # End at lr/1000
       anneal_strategy: 'cos'
 
 # Model architecture
 scoring_function:
-  hidden_dims: [64, 32]
-  dropout: 0.2
-  l2_lambda: 0.1
+  hidden_dims: [512, 256, 128]  # Larger network for 1000 classes
+  dropout: 0.1  # Reduced dropout
+  l2_lambda: 0.001  # Further reduced for extreme values
   activation:
     name: 'LeakyReLU'
     params:
       negative_slope: 0.1
   final_activation:
-    name: 'Softplus'
-    params:
-      beta: 10
+    name: 'Sigmoid'  # For proper 0-1 range
+    params: {}
 
 # Training constraints
 tau:
@@ -86,5 +85,20 @@ tau:
 # Set size constraints
 set_size:
   target: 1
-  max: 5.0
-  margin: 5 
+  max: 10.0  # More flexible for 1000 classes
+  margin: 10  # Larger margin for ImageNet
+
+# Training dynamics
+training_dynamics:
+  stability_factor: 0.01  # More aggressive
+  separation_factor: 5.0  # Much stronger separation for 1000 classes
+  perturbation_noise: 0.01
+  permutation_augmentation_prob: 0.5
+  coverage_tolerance: 0.02
+  coverage_closeness_threshold: 0.01
+  coverage_deficit_threshold: 0.02
+  size_penalty_boost: 1.5
+  coverage_boost: 2.0
+  xavier_init_gain: 1.0
+  num_workers: 2
+  ece_test_points: 10 
