--- a/src/config/imagenet.yaml
+++ b/src/config/imagenet.yaml
@@ -2,7 +2,7 @@
 inherit: base_config.yaml
 
 # Device configuration
-device: 1
+device: 0
 
 # Caching configuration
 cache:
@@ -35,7 +35,7 @@ data_dir: data/imagenet
 
 # Training parameters
 num_epochs: 50
-batch_size: 128  # Larger batch for more stable gradients with 1000 classes
+batch_size: 256  # Reduced from 512 for better stability
 target_coverage: 0.9
 
 # Training configuration
@@ -52,22 +52,22 @@ training:
 optimizer:
   name: 'AdamW'
   params:
-    lr: 0.001  # Increased learning rate
-    weight_decay: 0.0001  # Reduced weight decay
+    lr: 0.00005  # Much lower base learning rate for stability
+    weight_decay: 0.01  # Increased like CIFAR-100
   scheduler:
     name: 'OneCycleLR'
     params:
-      max_lr: 0.001
-      pct_start: 0.1  # Quick warmup
-      div_factor: 10  # Start at lr/10
-      final_div_factor: 1000  # End at lr/1000
+      max_lr: 0.00005  # Much lower max LR
+      pct_start: 0.2  # More gradual warmup like CIFAR-100
+      div_factor: 20  # Start at lr/20
+      final_div_factor: 100  # End at lr/100
       anneal_strategy: 'cos'
 
 # Model architecture
 scoring_function:
   hidden_dims: [256, 128]  # Simplified network
-  dropout: 0.1  # Reduced dropout
-  l2_lambda: 0.0  # No L2 regularization for now
+  dropout: 0.2  # Match CIFAR-100
+  l2_lambda: 0.01  # Add L2 regularization like CIFAR-100
   activation:
     name: 'LeakyReLU'
     params:
@@ -91,7 +91,7 @@ set_size:
 # Training dynamics
 training_dynamics:
   stability_factor: 0.01  # More aggressive
-  separation_factor: 5.0  # Much stronger separation for 1000 classes
+  separation_factor: 20.0  # Much stronger separation for 1000 classes
   perturbation_noise: 0.01
   permutation_augmentation_prob: 0.5
   coverage_tolerance: 0.02
