--- a/src/config/imagenet.yaml
+++ b/src/config/imagenet.yaml
@@ -34,9 +34,13 @@ log_dir: logs/imagenet
 data_dir: data/imagenet
 
 # Training parameters
-num_epochs: 50
+num_epochs: 50  # Reduced from 50 for faster experimentation
 batch_size: 256  # Reduced from 512 for better stability
 target_coverage: 0.9
+
+# Training data subset configuration
+# Set to 1.0 for full dataset, 0.3 for 30% of data
+training_subset_fraction: 1.0  # Using 30% of training data for faster experimentation
 
 # Training configuration
 training:
@@ -44,9 +48,9 @@ training:
     enabled: true
     max_norm: 0.5
   loss_weights:
-    coverage: 10.0  # lambda1 - prioritize coverage
-    size: 1.0      # lambda2 - moderate weight for size
-    margin: 0.1    # margin loss weight - reduced to avoid dominating
+    coverage: 5.0   # lambda1 - reduced from 10.0 for better balance
+    size: 2.0      # lambda2 - increased to better control set size
+    margin: 0.05   # margin loss weight - further reduced
 
 # Optimizer configuration
 optimizer:
@@ -67,7 +71,7 @@ optimizer:
 scoring_function:
   hidden_dims: [256, 128]  # Simplified network
   dropout: 0.2  # Match CIFAR-100
-  l2_lambda: 0.01  # Add L2 regularization like CIFAR-100
+  l2_lambda: 0.001  # Reduced L2 regularization for better learning
   activation:
     name: 'LeakyReLU'
     params:
@@ -90,10 +94,10 @@ set_size:
 
 # Training dynamics
 training_dynamics:
-  stability_factor: 0.01  # More aggressive
-  separation_factor: 20.0  # Much stronger separation for 1000 classes
-  perturbation_noise: 0.01
-  permutation_augmentation_prob: 0.5
+  stability_factor: 0.001  # Reduced for less regularization
+  separation_factor: 2.0   # Much reduced from 20.0 - was too aggressive
+  perturbation_noise: 0.005  # Reduced noise
+  permutation_augmentation_prob: 0.3  # Reduced permutation frequency
   coverage_tolerance: 0.02
   coverage_closeness_threshold: 0.01
   coverage_deficit_threshold: 0.02
