P_01: Fix score distribution collapse with min-max normalization
Replace sigmoid activation with min-max normalization to prevent both true and false class scores from collapsing to zero. The min-max normalization ensures:
- Scores always span the full [0,1] range for each sample
- Prevents degenerate solutions where all outputs are identical
- Maintains relative ordering needed for conformal prediction
- Creates clear separation between true and false class distributions

Key changes:
- Remove sigmoid final activation in favor of min-max normalization
- Normalize scores per sample: (score - min) / (max - min)
- Apply same normalization to perturbed scores for stability loss
- Update config to use 'None' for final_activation

This principled approach avoids complex engineering losses and directly addresses the core issue of score collapse.

--- a/src/config/cifar100.yaml
+++ b/src/config/cifar100.yaml
@@ -68,7 +68,7 @@ scoring_function:
     params:
       negative_slope: 0.1
   final_activation:
-    name: 'Sigmoid'  # For proper 0-1 range
+    name: 'None'  # Using min-max normalization instead
     params: {}
 
 # Training constraints
