P_02: Enhance conformal prediction with noise injection and restore Sparsemax extreme penalties
- Add comprehensive noise injection framework for robustness testing with three types:
  * logit_gaussian: Direct noise addition to logit space (default, std=3.0 for dramatic results)
  * temperature: Realistic calibration uncertainty simulation
  * quantization: Edge deployment quantization noise simulation
- Implement noise in both calibration and test phases to maintain exchangeability
- Restore Sparsemax original extreme penalty behavior (1000.0 for calibration, inf for prediction)
- Add entropy monitoring and detailed noise application logging
- Configure high noise level (std=3.0) for significant set size increases while maintaining coverage

--- a/src/config/base_conformal_scorers.yaml
+++ b/src/config/base_conformal_scorers.yaml
@@ -2,6 +2,12 @@
 device: 1  # GPU=0/1 and CPU=-1
 target_coverage: 0.9
 
+# Noise configuration for robustness testing
+noise_type: "logit_gaussian"  # Options: "logit_gaussian", "temperature", "quantization", "mc_dropout"
+noise_std: 3.0  # High noise for dramatic results (Sparsemax now fixed)
+temperature_range: [0.7, 1.5]  # For temperature noise (realistic calibration range)
+mc_samples: 5  # For MC dropout
+
 # Directory paths
 data_dir: data  # Directory where datasets are stored
 base_dir: .     # Base directory for relative paths
